--- a/Website-breakdown/style.css
+++ b/Website-breakdown/style.css
@@ -1,7 +1,7 @@
 body{
-	background:57D4DE ;
-	color:154360 ;
-	font-family:Ariel Black ;
+	background:#D6EAF8 ;
+	color:#154360 ;
+	font-family:Geneva ;
 }
 
 p{
