--- a/typography/css/typography-1.css
+++ b/typography/css/typography-1.css
@@ -1,3 +1,29 @@
+/*
+	font-family: 'Merriweather', serif;
+    font-family: 'Squada One', cursive;
+*/
+
+.post,
+input {
+	font-family:'Merriweather', serif;
+}
+
+h1,
+button,
+a,
+.post-date {
+	font-family: 'Squada One', cursive;
+}
+
+button {
+	font-size: 1.125em;
+}
+
+
+.post {
+	line-height: 1.2;
+}
+
 .post-text {
 	font-size: 1.25em;
 }
@@ -7,5 +33,13 @@
 }
 
 .post-author {
+	/*color: darkblue;*/
+}
+
+.post-author strong {
 	color: darkblue;
+}
+
+.post-date {
+	font-size: 0.5em;
 }
