--- a/typography/style.css
+++ b/typography/style.css
@@ -1,2 +1,9 @@
+/*typography pairing 1 */
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Squada+One&display=swap');
+
+
+
+
+
 @import "css/main.css";
 @import "css/typography-1.css";
