--- a/typography/style.css
+++ b/typography/style.css
@@ -1,8 +1,11 @@
 /*typography pairing 1 */
 @import url('https://fonts.googleapis.com/css?family=Merriweather|Squada+One&display=swap');
 
+/*typography pairing 2 */
+@import url("https://fonts.googleapis.com/css?family=Akronim|Titillium+Web&display=swap" rel="stylesheet");
 
-
+/*typography pairing 3 */
+@import url("https://fonts.googleapis.com/css?family=Anton|Tomorrow&display=swap" rel="stylesheet");
 
 
 @import "css/main.css";
