--- a/publish/css/post.css
+++ b/publish/css/post.css
@@ -1,6 +1,18 @@
 .post {
-	border; 1px solid gray;
-	border-radius: 0.25;
+	border: 1px solid gray;
+	border-radius: 0.25em;
 	padding: 1em;
-	margin-top: :1em;
+	margin-top: 1em;
+}
+
+.post-text {
+
+}
+
+.post-author {
+
+}
+
+.post-date {
+	
 }
