--- a/color/style.css
+++ b/color/style.css
@@ -11,5 +11,4 @@
 @import "css/main.css";
 @import "css/typography-1.css";
 @import "css/publish.css";
-@import "css/posts.css";
-@import "css/color.css";
+@import "css/post.css";
