--- a/publish/css/post.css
+++ b/publish/css/post.css
@@ -6,13 +6,13 @@
 }
 
 .post-text {
-
+font-family:'Merriweather', serif;
 }
 
 .post-author {
-
+font-family: 'Squada One', cursive;
 }
 
 .post-date {
-	
+font-family:'Titillium Web', serif;
 }
