--- a/publish/style.css
+++ b/publish/style.css
@@ -11,4 +11,4 @@
 @import "css/main.css";
 @import "css/typography-1.css";
 @import "css/publish.css";
-@import "css/posts.css";
+@import "css/post.css";
