--- a/color/css/color.css
+++ b/color/css/color.css
@@ -4,40 +4,40 @@
 /* root is the top most element of the html page */
 :root {
 	/* monochomatic green color scheme */
-	--main-color: #4DFFE1;
-	--accent-color: #00CCAA;
-	--placeholder-color: #268071;
+	--main-color: gold;
+	--accent-color: #6AC300;
+	--placeholder-color: #00C37F;
 }
 
 :root {
-	/* orange analagous color scheme */
-	--main-color: #FFD908;
-	--accent-color: #E8AF05;
-	--placeholder-color: var (#FFC400);
+	/* blue analagous color scheme */
+	--main-color: #008BC3;
+	--accent-color: #00DCFF;
+	--placeholder-color: var(--accent-color);
 }
 
 button, input, textarea {
-	background-color: var (#FFD908);
-	border-color: var (#E8AF05);
-	color: var (#FFC400);
+	background-color: var(--main-color);
+	border-color: var(--accent-color);
+	color: var(--placeholder-color);
 }
 
 button::placeholder, input::placeholder, textarea::placeholder {
-	color: var (#00CCAA);
+	color: var(--accent-color);
 }
 
 a {
-	color: var (#00CCAA);
+	color: var(--accent-color);
 }
 
 a:hover {
-	color: var (#FFD908);
+	color: var(--main-color);
 }
 
 .post {
-	border-color: var (#E8AF05);
+	border-color: var(--accent-color);
 }
 
 #title {
-	color: var (#00CCAA);
+	color: var(--accent-color);
 }
