--- a/profile/css/main.css
+++ b/profile/css/main.css
@@ -19,6 +19,20 @@ button, input {
 	margin: 0 auto;
 }
 
+#user-info {
+	margin-bottom: 1em;
+}
+
+/* user is authenticated */
 .auth #login {
-	display:none;
+	display: none;
+}
+
+.auth #user-info {
+	display: block;
+}
+
+/* user is not authenticated */
+#user-info {
+	display: none;
 }
