--- a/profile/style.css
+++ b/profile/style.css
@@ -1,15 +1,13 @@
-/*typography pairing 1 */
-@import url('https://fonts.googleapis.com/css?family=Merriweather|Squada+One&display=swap');
+/* typographic pairing 1 */
+@import url('https://fonts.googleapis.com/css?family=Lacquer|Odibee+Sans&display=swap');
 
-/*typography pairing 2 */
-@import url("https://fonts.googleapis.com/css?family=Akronim|Titillium+Web&display=swap" rel="stylesheet");
-
-/*typography pairing 3 */
-@import url("https://fonts.googleapis.com/css?family=Anton|Tomorrow&display=swap" rel="stylesheet");
-
+/* typographic pairing 2 */
+@import url('https://fonts.googleapis.com/css?family=Kalam:400,700|Tomorrow:400,700&display=swap');
 
 @import "css/main.css";
-@import "css/typography-1.css";
+@import "css/typography-2.css";
+@import "css/color.css";
+
 @import "css/publish.css";
 @import "css/post.css";
-@import "css/color.css";
+@import "css/profile.css";
