--- a/publish/css/main.css
+++ b/publish/css/main.css
@@ -18,3 +18,21 @@ button, input {
 	max-width: 800px;
 	margin: 0 auto;
 }
+
+#user-info {
+	margin-bottom: 1em;
+}
+
+/* user is authenticated */
+.auth #login {
+	display: none;
+}
+
+.auth #user-info {
+	display: block;
+}
+
+/* user is not authenticated */
+#user-info {
+	display: none;
+}
