--- a/layout/index.html
+++ b/layout/index.html
@@ -34,19 +34,34 @@
     </div>
 
     <div id="user-info">
-      <p id="user-name"></p>
+      <p id="login-username"></p>
+      <button id="logout-button">Logout</button>
+      <a href="profile.html" id="profile-link">Edit Profile</a>
     </div>
 
-    <div id="sign-up">
-      <input id="sign-up-username" type="text" placeholder="Username">
-      <input id="sign-up-email" type="text" placeholder="Email">
-      <input id="sign-up-password" type="password" placeholder="Password">
-      <button id="sign-up-button">Sign Up</button>
-      <p id="sign-up-message"></p>
+    <div id="login">
+      <input id="login-email" type="text" placeholder="Email">
+      <input id="login-password" type="password" placeholder="Password">
+      <button id="login-button">Login</button>
+      <p id="login-message"></p>
+      <p><a href="create.html">Create a new account</a></p>
     </div>
+
+    <div id="publish-post">
+      <textarea id="publish-text" placeholder="Compose your post..."></textarea>
+      <button id="publish-button">Publish</button>
+    </div>
+
+    <div id="posts"></div>
+    
   </div>
 
   <script src="js/helpers.js"></script>
-  <script src="js/create.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/publish.js"></script>
+  <script src="js/displayPosts.js"></script>
+  <script>
+    fb.loadPosts();
+  </script>
 </body>
 </html>
