--- a/layout/profile.html
+++ b/layout/profile.html
@@ -34,19 +34,32 @@
     </div>
 
     <div id="user-info">
-      <p id="user-name"></p>
+      <p id="login-username"></p>
+      <button id="logout-button">Logout</button>
+      <a href="profile.html" id="profile-link">Edit Profile</a>
     </div>
 
-    <div id="sign-up">
-      <input id="sign-up-username" type="text" placeholder="Username">
-      <input id="sign-up-email" type="text" placeholder="Email">
-      <input id="sign-up-password" type="password" placeholder="Password">
-      <button id="sign-up-button">Sign Up</button>
-      <p id="sign-up-message"></p>
+    <div id="login">
+      <input id="login-email" type="text" placeholder="Email">
+      <input id="login-password" type="password" placeholder="Password">
+      <button id="login-button">Login</button>
+      <p id="login-message"></p>
+      <p><a href="create.html">Create a new account</a></p>
     </div>
+
+    <div id="profile">
+      <input id="display-name" placeholder="User Name">
+      <textarea id="profile-bio" placeholder="Your bio"></textarea>
+      <textarea id="profile-location" placeholder="Your Location"></textarea>
+      <textarea id="profile-hobbies" placeholder=" Your Hobbies"></textarea>
+      <button id="update-profile">Update Profile</button>
+    </div>
+    
   </div>
 
   <script src="js/helpers.js"></script>
-  <script src="js/create.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/profile.js"></script>
+  
 </body>
 </html>
