--- a/layout/index.html
+++ b/layout/index.html
@@ -1,3 +1,4 @@
+  
 <!doctype html>
 <html>
 <head>
@@ -34,9 +35,9 @@
     </div>
 
     <div id="user-info">
-      <p id="login-username"></p>
+      <p id="user-name"></p>
+      <a id="edit-profile-link">Edit Profile</a>
       <button id="logout-button">Logout</button>
-      <a href="profile.html" id="profile-link">Edit Profile</a>
     </div>
 
     <div id="login">
