--- a/layout/style.css
+++ b/layout/style.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Kalam:400,700|Tomorrow:400,700&display=swap');
 
 @import "css/main.css";
-@import "css/layout-1"
+@import "css/layout-1";
 @import "css/typography-2.css";
 @import "css/color.css";
 
