--- a/layout/css/layout-3.css
+++ b/layout/css/layout-3.css
@@ -4,8 +4,8 @@
 	grid-gap: 2em;
 
 	grid-template-areas:
-		"title login"
-		"publish posts"
+		"login title"
+		"posts publish"
 		"publish posts"
 		"nothing posts"
 	;
