--- a/responsive/style.css
+++ b/responsive/style.css
@@ -13,3 +13,6 @@
 @import "css/post.css";
 @import "css/profile.css";
 @import "css/menu.css";
+@import "css/create.css";
+
+@import "css/responsive.css";
