--- a/final/style.css
+++ b/final/style.css
@@ -14,6 +14,6 @@
 @import "css/profile.css";
 @import "css/menu.css";
 @import "css/create.css";
-@import "css/user.css"
+@import "css/user.css";
 
 @import "css/responsive.css";
